--- a/style.css
+++ b/style.css
@@ -609,14 +609,16 @@ section.aboutme .motherdiv .text {
 
 
     header .motherdiv .left div h1 {
-        font-size: 2rem;
-        line-height: 30px;
+        font-size: 3rem;
+        /* line-height: 30px; */
         padding-bottom: 0;
+        text-align: left;
     }
 
     .left p {
-        font-size: 1.5rex;
+        font-size: 2.5rex;
         padding-top: 5px;
+        text-align: left;
     }
 
     .youtube .motherdiv .video {
@@ -632,7 +634,7 @@ section.aboutme .motherdiv .text {
 
         .video iframe {
             width: 100%;
-            height: auto;
+            height: 400px;
         }
     }
 
