--- a/style.css
+++ b/style.css
@@ -609,32 +609,33 @@ section.aboutme .motherdiv .text {
 
 
     header .motherdiv .left div h1 {
-        font-size: 3rem;
-        /* line-height: 30px; */
+        font-size: 1.5rem;
+        line-height: 30px;
         padding-bottom: 0;
-        text-align: left;
+        text-align: center;
     }
 
     .left p {
-        font-size: 2.5rex;
+        font-size: 1.5rex;
         padding-top: 5px;
-        text-align: left;
+        text-align: center;
     }
 
     .youtube .motherdiv .video {
         /* margin: auto auto; */
         width: 100%;
-        padding: 10px;
+        /* padding: 10px; */
         height: auto;
     }
 
     main section.youtube {
-        padding: 0;
+        padding: 0px;
         text-align: center;
 
         .video iframe {
             width: 100%;
-            height: 400px;
+            height: auto;
+            padding: 0px;
         }
     }
 
