--- a/style.css
+++ b/style.css
@@ -61,13 +61,13 @@ main section.youtube {
 
 }
 
-main .youtube .motherdiv {
+/* main .youtube .motherdiv {
     display: block;
     padding-bottom: 70px;
     text-align: center;
 
 
-}
+} */
 
 .youtube .motherdiv .floatingdiv {
     margin: auto auto;
@@ -150,7 +150,7 @@ main .youtube .motherdiv {
 
 
 
-.youtube .motherdiv .video {
+.youtube .video {
     margin: auto auto;
     width: 100%;
 
@@ -621,11 +621,11 @@ section.aboutme .motherdiv .text {
         text-align: center;
     }
 
-    .youtube .motherdiv .video {
+    .youtube .video {
         /* margin: auto auto; */
         width: 100%;
         /* padding: 10px; */
-        height: auto;
+        
     }
 
     main section.youtube {
@@ -634,17 +634,12 @@ section.aboutme .motherdiv .text {
 
         .video iframe {
             width: 100%;
-            height: auto;
+            height: 450;
             padding: 0px;
         }
     }
 
-    main .youtube .motherdiv {
-        /* display: flex; */
-        padding-bottom: 0px;
-
-
-    }
+   
 
     section.socialproof {
         padding: 20px;
