--- a/style.css
+++ b/style.css
@@ -602,7 +602,7 @@ section.aboutme .motherdiv .text {
     }
 
     body {
-        overflow-x: hidden;
+        /* overflow-x: hidden; */
     }
 
     /* STYLING MY HEADER */
@@ -622,9 +622,13 @@ section.aboutme .motherdiv .text {
     }
 
     .youtube .video {
-        /* margin: auto auto; */
+        margin: auto auto;
+        text-align: center;
         width: 100%;
-        /* padding: 10px; */
+        padding: 5px;
+        align-items: center;
+        display: flex;
+  
         
     }
 
@@ -633,9 +637,14 @@ section.aboutme .motherdiv .text {
         text-align: center;
 
         .video iframe {
+            text-align: center;
             width: 100%;
-            height: 450;
+            height: 400px;
             padding: 0px;
+            /* margin: 20px; */
+
+            
+            
         }
     }
 
