--- a/style.css
+++ b/style.css
@@ -607,8 +607,8 @@ section.aboutme .motherdiv .text {
         margin: auto auto;
         text-align: center;
         width: 100%;
-        padding: 5px;
-        align-items: center;
+        /* padding: 5px; */
+        /* align-items: center; */
         display: flex;
 
 
