--- a/style.css
+++ b/style.css
@@ -32,25 +32,25 @@ header .motherdiv {
 
 .motherdiv .left {
     display: block;
-    width: 100%;
-    margin: auto 20;
+    width: 60%;
+    margin: auto auto;
     text-align: center;
 
 }
 
 .left h1 {
     color: #fff;
-    font-size: 4rem;
+    font-size: 2rem;
     font-family: Poppins;
-    line-height: 60px;
+    line-height: 30px;
 }
 
 .left p {
     color: silver;
-    font-size: 2rex;
+    font-size: 1.5rex;
     font-family: sans-serif;
     font-weight: 600;
-    padding-top: 20px;
+    padding-top: 5px;
 }
 
 
@@ -58,7 +58,7 @@ header .motherdiv {
 /* This is the beginning of my main styling */
 
 main section.youtube {
-    padding: 30px;
+    /* padding: 10px; */
     text-align: center;
 
 }
@@ -125,7 +125,7 @@ main section.youtube {
 .btn-grad {
     background: linear-gradient(to right, black, white);
 
-    margin: 10px;
+    /* margin: 10px; */
     padding: 30px 5px;
     text-align: center;
     align-items: center;
@@ -157,8 +157,9 @@ main section.youtube {
     width: 100%;
 
 
-    iframe {
-        border-radius: 5px;
+    video {
+        /* border-radius: 5px; */
+        width: 40%;
         box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
     }
 }
@@ -232,7 +233,7 @@ section.socialproof {
     border-top-left-radius: 40px;
     /* border-top-right-radius: 40px; */
     border-bottom-right-radius: 100px;
-    padding: 50px;
+    padding: 20px;
 
 }
 
@@ -717,6 +718,15 @@ section.socialmedia {
         text-align: center;
     }
 
+    .motherdiv .left {
+
+        width: 100%;
+        margin: auto 20;
+
+
+    }
+
+
     .left p {
         font-size: 1.5rex;
         padding-top: 5px;
@@ -730,6 +740,11 @@ section.socialmedia {
         /* padding: 5px; */
         /* align-items: center; */
         display: flex;
+
+        video{
+            width: 100%;
+            margin-top: -50px;
+        }
 
 
     }
